@@ -1,6 +1,6 @@
 # Expect script for LD Bootstrap Tests
 #   Copyright 1993, 1994, 1995, 1996, 1997, 1998, 2000, 2001, 2002, 2004,
-#   2005, 2006, 2007, 2009  Free Software Foundation, Inc.
+#   2005, 2006, 2007, 2009, 2010  Free Software Foundation, Inc.
 #
 # This file is part of the GNU Binutils.
 #
@@ -77,14 +77,14 @@ foreach flags {"" "strip" "--static" "--traditional-format"
     }
 
     # Plugin support requires linking with a dynamic library which
-    # means that these
+    # means that these tests will fail.
     if { $flags == "--static" && $plugins == "yes" } then {
 	untested $testname
 	continue
     }
 
     # If we only have a shared libbfd, we probably can't run the
-    # --static test.will fail.
+    # --static test.
     if { $flags == "--static" && ! [string match "*libbfd.a*" $BFDLIB] } then {
 	untested $testname
 	continue
